Adds new scripts

--- a/01-01.md
+++ b/01-01.md
@@ -1,1 +1,9 @@
-# What is React
+# 01_01 - What is React
+
+React is a JavaScript library that you can use to create user interfaces. It was created at Facebook and open-sourced in March of 2013. Since then, React has expanded beyond the web with React Native, a tool that allows you to create native mobile applications using React.
+
+One of the best resources that you have at your disposal when learning React is the React Docs.
+
+- React.dev
+
+React is a popular library with tens of thousands of stars on GitHub and used in production by huge companies like Twitter, Netflix, and Microsoft. But the point of using React is not just because it's popular, but because it's fun to use and because its component architecture makes it faster and easier to build amazing products for the web and even for native platforms.
