--- a/02-01.md
+++ b/02-01.md
@@ -1,4 +1,4 @@
-# Adding React to your Project
+# 02_01 - Adding React to your Project
 
 One of the fastest ways of getting started with a React project is to add a link to the React library to an HTML page.
 
@@ -17,11 +17,7 @@ Once added to the page, you can start to create your first element using React. 
 ```html
 <script type="text/javascript">
   ReactDOM.render(
-    React.createElement(
-      "h1",
-      null,
-      "Getting Started!"
-    ),
+    React.createElement("h1", null, "Getting Started!"),
     document.getElementById("root")
   );
 </script>
