--- a/02-02.md
+++ b/02-02.md
@@ -1,4 +1,4 @@
-# React Elements
+# 02_02 - Creating React Elements
 
 Right now, we're rendering this react element to the Root component, but let's separate this into its own variable.
 
@@ -8,8 +8,5 @@ let heading = React.createElement(
   { style: { color: "blue" } },
   "Heyyyy Everyone!"
 );
-ReactDOM.render(
-  heading,
-  document.getElementById("root")
-);
+ReactDOM.render(heading, document.getElementById("root"));
 ```
