--- a/02-05.md
+++ b/02-05.md
@@ -1,4 +1,6 @@
-# Working with JSX Syntax
+# 02_05 - Working with JSX Syntax
+
+As you work with react and JSX together, you'll start to notice how powerful JSX actually is. We can use it to inject dynamic content into our tags simply by referencing them by variable name.
 
 ```javascript
 let robot = "🤖";
@@ -35,3 +37,5 @@ ReactDOM.render(
   document.getElementById("root")
 );
 ```
+
+So JSX is a really powerful way that we can inject dynamic content into our apps.
