--- a/00-02.md
+++ b/00-02.md
@@ -1,9 +1,15 @@
-# What You Should Know
+# 00_02 - Codespaces
 
-Learning React is an intro to React, but I am going to assume that you’re taking this course with some front-end development skills already in place.
+For this course, we're going to be using GitHub Codespaces to build our [_________]. In order to open up GitHub Codespaces for this project, there are two ways to get there. The first way is simply to navigate to the GitHub repo for this course and add /codespaces at the end of the URL. And that'll take you to this screen.
 
-React is built out of JavaScript - so it might be helpful to know a bit of JavaScript. If you aren’t familiar with JavaScript, I’d recommend JavaScript Essential Training with Morten Rand-Hendriksen.
+And the other way to get to this screen is just by clicking on the link for GitHub Codespaces below. Once there, you're just going to click on this green button that says Create Codespace on Main, and that will open up an editor for you. And that takes a minute or two, so just wait for that to come up.
 
-The course will also use some of the latest JavaScript syntax. You'll pick that up in Morten's JavaScript class, but my course Learning ECMAScript6 could be a good supplement.
+And once the editor finishes loading, you should see all of the files for the project over here on the left hand side. Now if you want to navigate to the specific state that our app is in at any given point in the course, you can simply check out the corresponding branch with the chapter number and the video number.
 
-That should be about it! 
+So for example, if we wanted to check out the exact code state at the beginning of, let's say chapter four, video two, we could simply run the command git checkout 04_02. And then, in order to check out the beginning, we would say \_B.
+
+Now if you want to check out the code at the end of a given video, you can always just add \_E for end instead. But anyway, once you've navigated to that branch, another thing that you're going to need to do is install the corresponding NPM packages into both the frontend and backend directories.
+
+And the way you do that is simply by saying cd front-end. That'll take you to the frontend folder where you can run npm install, which will install all of the corresponding NPM packages into the frontend. And once that's done, you're going to do the same thing for the backend by changing directories back into the surrounding directory with cd .., and then you're going to change into the backend directory and run the same command, npm install, which will install all of the backend NPM packages for you.
+
+And that should be all you need to do. So now that you know how to work with Codespaces, you can follow along with me as we write this full-stack app.
