--- a/01-02.md
+++ b/01-02.md
@@ -1,15 +1,1 @@
-# Using the Chrome Dev Tools
-
-To get ready to work on React projects, a great place to get started is to install the React Developer Tools. These are available for both Chrome and Firefox.
-
-In Chrome, we're going to navigate to the Chrome Web Store. https://chrome.google.com/webstore/category/apps
-
-From here, I need to search for and install the React Developer Tools. This extension will let me inspect react components and help me deal with any syntax errors.
-
-Install React dev tools MAC: Command Option J PC: Ctrl shift J
-
-Open our Page
-
-File://
-
-So there we go, our Chrome browser is now ready to develop some real projects using React.
+# 01_02 - How React Works
