--- a/03-03.md
+++ b/03-03.md
@@ -1,1 +1,45 @@
-# 03_03 - Working with Lists
+# 03_03 - Working With Lists
+
+So far, we've passed properties to components in a few different ways. Using strings, using this cool little date method, but what if we have more data. How do we display that data in the component tree?
+
+Well, let's create an array and try it out.
+
+```javascript
+const dishes = [
+  "Macaroni and Cheese",
+  "Salmon and Potatoes",
+  "Tofu with Vegetables"
+];
+```
+
+Remember this is your restaurant so obviously put all of your favorite foods on your own list. Don't let me tell you how to run your business.
+
+We're going to display this list in our main component, so we'll need to map over it. Something that helps me when I'm writing code is to break everything down into little chunks. Like if I have to display a list, let me make sure I can map over it first before adding it to the component:
+
+```
+dishes.map((dish) => console.log(dish));
+```
+
+Ok so that worked, now I need to make the data available to the component, we'll need to add the property first:
+
+```javascript
+<Main adjective="amazing" dishes={dishes} />
+```
+
+Then we'll display it in the component. copy and paste map function into the JSX braces
+
+```javascript
+<ul>
+  {dishes.map((dish) => (
+    <li>{dish}</li>
+  ))}
+</ul>
+```
+
+And it's working.
+
+```
+style={{ listStyleType: "none" }}
+```
+
+Finally, if we open the console, we'll notice that there is a warning here about keys. In the next video, we'll fix that.
