--- a/03-04.md
+++ b/03-04.md
@@ -1,1 +1,37 @@
-# 03_04 - Adding Keys to List Items
+# 03_04 Add Keys
+
+In the previous video, we rendered a list of menu items dynamically. Meaning that if I added another item to the list, my UI would update automatically. But we saw an error in the console about a key. Click on the docs link.
+
+Possible that things might get out of sync when rendering occurs -- particularly if something is added to the DOM at the beginning or middle instead of the end of the list.
+
+A key is like an id that helps keep everything in sync. And of course, it's JavaScript right? So there are a couple of ways to handle this.
+
+First, we could just add an index.
+
+```javascript
+{
+  dishes.map((dish, i) => <li key={i}>{dish}</li>);
+}
+```
+
+The React docs recommend against this because it says there can be problems with rendering. Which is kind of not the point of keys in the first place.
+
+```javascript
+const dishObjects = dishes.map((dish, i) => ({
+  id: i,
+  title: dish
+}));
+console.log(dishObjects);
+```
+
+Isn't that amazing? I feel so alive now. Update the props
+
+```javascript
+<Main adjective="amazing" dishes={dishObjects} />
+```
+
+Isn't this the same because we're using an index again? Not really, because the data is stable. Created in this function instead of being created while the list items are rendering.
+
+Your data might already look like this too. So you can just use an id or other unique field as the key if you're dealing with an array of objects.
+
+Keys help keep your data in sync as your application's state changes throughout time.
