--- a/00-02.md
+++ b/00-02.md
@@ -1,6 +1,6 @@
 # 00_02 - Codespaces
 
-For this course, we're going to be using GitHub Codespaces to build our [_________]. In order to open up GitHub Codespaces for this project, there are two ways to get there. The first way is simply to navigate to the GitHub repo for this course and add /codespaces at the end of the URL. And that'll take you to this screen.
+For this course, we're going to be using GitHub Codespaces to build our React application. In order to open up GitHub Codespaces for this project, there are two ways to get there. The first way is simply to navigate to the GitHub repo for this course and add /codespaces at the end of the URL. And that'll take you to this screen.
 
 And the other way to get to this screen is just by clicking on the link for GitHub Codespaces below. Once there, you're just going to click on this green button that says Create Codespace on Main, and that will open up an editor for you. And that takes a minute or two, so just wait for that to come up.
 
