--- a/03-03.md
+++ b/03-03.md
@@ -5,7 +5,7 @@ So far, we've passed properties to components in a few different ways. Using str
 Well, let's create an array and try it out.
 
 ```javascript
-const dishes = [
+const orders = [
   "Macaroni and Cheese",
   "Salmon and Potatoes",
   "Tofu with Vegetables"
